# HPC-edu

./: README.md
01.OpenMP/: CMakeLists.txt  README.md  README.ru.md  main.cpp
01.OpenMP/benchmarks/: benchmark.cpp
01.OpenMP/include/: matrix.h
01.OpenMP/src/: matrix_base.cpp  matrix_math.cpp  matrix_math_parallel.cpp  matrix_utils.cpp
01.OpenMP/tests/: test.cpp
02.MPI/: CMakeLists.txt  README.md  README.ru.md  main.cpp
02.MPI/benchmarks/: benchmark.cpp  benchmarks.sh
02.MPI/include/: matrix.h
02.MPI/src/: matrix_base.cpp  matrix_math_parallel.cpp  matrix_utils.cpp
02.MPI/tests/: test.cpp
